--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -1,4 +1,4 @@
 aux_source_directory(. DIR_LIB_SRCS)
 add_library (base ${DIR_LIB_SRCS})
 add_executable(TestSingleton TestSingleton.cpp)
-add_executable(TestTask TestTask.cpp)
+add_executable(TestTask TestTask.cpp Task.cpp TaskMgr.cpp TTime.cpp)
