实现的时间任务执行的base文件

--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -1,4 +1,11 @@
 aux_source_directory(. DIR_LIB_SRCS)
 add_library (base ${DIR_LIB_SRCS})
 add_executable(TestSingleton TestSingleton.cpp)
+
 add_executable(TestTask TestTask.cpp Task.cpp TaskMgr.cpp TTime.cpp)
+target_link_libraries(TestTask 
+    base 
+    pthread # 添加线程库
+    stdc++fs 
+)
+
